<resources>
    <string name="app_name">EazyPay</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="please_login_with_your_information">please login with your information</string>
    <string name="welcome">Welcome</string>
    <string name="logo_image">logo image</string>
</resources>